<resources>
    <string name="app_name">WELowanie</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="Change_level">Wybierz poziom rozgrywki:</string>
    <string name="Statistics_button">Statystyki</string>
    <string name="New_Game_Button">Nowa gra</string>
    <string name="Welcome">Witaj,</string>
    <string name="Login">Login:</string>
    <string name="LoginHint">Tutaj podaj swój login</string>
    <string name="Password">Hasło:</string>
    <string name="PasswordHint">Tutaj podaj swoje hasło</string>
    <string name="LoginButton">Zaloguj</string>
    <string name="description">Dynamic</string>
    <string name="RegisterButton">Zarejestruj</string>

    <string-array name="level_difficulty">
        <item>Semestr I</item>
        <item>Semestr II</item>
        <item>Semestr III</item>
        <item>Semestr IV</item>
        <item>Semestr V</item>
        <item>Semestr VI</item>
        <item>Best_of_Wat</item>
    </string-array>
    <string-array name="hardness">
        <item>Trudność: *</item>
        <item>Trudność: ***</item>
        <item>Trudność: ***</item>
        <item>Trudność: **</item>
        <item>Trudność: *</item>
        <item>Trudność: **</item>
        <item>Trudność: *</item>
    </string-array>
    <string name="title_activity_result">ResultActivity</string>
    <string name="firstPlace">1. Tyle i tyle ECTS</string>
    <string name="secondPlace">2. Tyle i tyle ECTS</string>
    <string name="thirdPlace">3. Tyle i tyle ECTS</string>
    <string name="resultText">Top 3 wyników</string>
    <string name="exitButton">Wyjście</string>
    <string name="returnToMenu">Wróć do menu</string>
    <string name="ECTS">ECTS</string>
    <string name="returnToSelectStage">Wróć do wyboru poziomu</string>
    <string name="CreateAccButton">Zarejetruj</string>
    <string name="LoginCreateHint">Podaj wybrany login</string>
    <string name="PasswordCreateHint">Podaj wybrane hasło</string>
    <string name="nameSemestr">"Semestr: "</string>
    <string name="tw_j_wynik">Twój wynik</string>
    <string name="confirm_pass">Podaj hasło ponownie</string>
</resources>
