<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_n"
    android:orientation="vertical"
    android:weightSum="1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:textColor="@color/textWhite"
        android:text="@string/Login"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/registerLogin"
        android:textColor="@color/textWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/LoginCreateHint"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textWhite"
        android:layout_gravity="center_horizontal"
        android:text="@string/Password"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="wrap_content"
        android:textColor="@color/textWhite"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/PasswordCreateHint"
        android:inputType="textPassword"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/registerButton"
        android:textColor="@color/textWhite"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:onClick="onStartRegister"
        android:text="@string/RegisterButton" />

    <TextView
        android:id="@+id/registerError"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dip"
        android:textColor="#e30000"
        android:textStyle="bold" />
</LinearLayout>

